test fix: added div container to wrap the heading elements on reviews pages, using it to limit their total width to 100vw or less

--- a/reviews/reviews.css
+++ b/reviews/reviews.css
@@ -6,6 +6,7 @@
   font-optical-sizing: auto;
   font-weight:300;
   max-width: 100vw;
+  
 }
 
 html,body {margin: 0; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
@@ -333,6 +334,13 @@ main h2 {font-size: 2rem;}
   display: flex;
   flex-direction: column;
     } 
+
+    #reviews .heading-container-widthlimiter{
+      width: 100%;
+      max-width: 100vw;
+      display: flex;
+      flex-direction: column;
+    }
         /*controls for sorting*/
       
         .dt-layout-row .dt-length {display: flex; justify-content: start;}
